fixing spacing of gallery blocks on mobile

--- a/scss/modules/_project-details.scss
+++ b/scss/modules/_project-details.scss
@@ -220,6 +220,9 @@
                 padding-bottom: 6em;
             }
             @include biggerPhone{
+                &.design-language{
+                    padding-bottom: 7em;
+                }
                 padding: 0;
             }
             .screensContainer{
